cabal-version:        2.4

name:                 extra-time
version:              0.0.0.0
license-file:         LICENSE
author:               typeable.io
maintainer:           giorgio@marinel.li
build-type:           Simple
extra-source-files:   README.md, data/opm-holidays.csv

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    KindSignatures
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
  build-depends:
    -- | from ghc
    base >= 4.7 && < 5 ,
    binary ,
    binary-instances ,
    bytestring ,
    containers ,
    cassava ,
    cassava-embed ,
    file-embed ,
    deepseq ,
    mtl >= 2.2 ,
    text ,
    th-lift ,
    time,
    -- | from hackage
    aeson ,
    generic-arbitrary ,
    http-api-data ,
    lens >= 4.17 ,
    QuickCheck ,
    quickcheck-instances ,
    timezone-series ,
    vector ,
  if !impl(ghcjs)
    build-depends:
      dom-parser ,
      xml-conduit-writer ,
  exposed-modules:
    Data.Time.Extra
    Data.Time.FastSeries
    Data.Time.Fmt
    Data.Time.Holidays
    Data.Time.LocalTime.Short
    Data.Time.Utils
  other-modules:
    Holidays.EDay
