cabal-version:      2.4
name:               extra-time
version:            0.0.0.0
license-file:       LICENSE
author:             typeable.io
maintainer:         giorgio@marinel.li
build-type:         Simple
extra-source-files:
  data/opm-holidays.csv
  README.md

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    KindSignatures
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications

  build-depends:
    , aeson
    , base                  >=4.11   && <5
    , binary
    , binary-instances
    , bytestring
    , cassava
    , cassava-embed
    , containers            >=0.5.8
    , deepseq
    , file-embed            >=0.0.10
    , generic-arbitrary
    , http-api-data
    , lens                  >=4.17
    , mtl                   >=2.2
    , QuickCheck
    , quickcheck-instances
    , text
    , th-lift
    , time                  >=1.6
    , timezone-series
    , vector

  if !(impl(ghcjs) || arch(javascript) || arch(wasm32))
    build-depends:
      , dom-parser          >=2.0
      , xml-conduit-writer

  exposed-modules:
    Data.Time.Extra
    Data.Time.FastSeries
    Data.Time.Fmt
    Data.Time.Holidays
    Data.Time.LocalTime.Short
    Data.Time.Utils

  other-modules:      Holidays.EDay
